third_party/rust/serde_json/v1/crate/tests/ui/missing_value.stderr
error: unexpected end of macro invocation
 --> tests/ui/missing_value.rs:4:5
  |
4 |     json!({ "a" : });
  |     ^^^^^^^^^^^^^^^^ missing tokens in macro arguments
  |
  = note: this error originates in the macro `json_internal` (in Nightly builds, run with -Z macro-backtrace for more info)
